[package]
name = "spherical_voronoi"
description = "Generate Voronoi diagrams on a sphere."
version = "0.3.1"
authors = ["Roman Akberov <r.k.akberov@gmail.com>"]
license = "MIT"
keywords = ["voronoi", "sphere", "geometry"]
repository = "https://github.com/RomanAkberov/spherical_voronoi"

[dependencies]
cgmath = "0.12.0"
ideal = "0.1.0"
