[package]
name = "spherical_voronoi"
description = "Generate Voronoi diagrams on a sphere."
version = "0.4.0"
authors = ["Roman Akberov <r.k.akberov@gmail.com>"]
license = "MIT"
keywords = ["voronoi", "sphere", "geometry"]
repository = "https://github.com/RomanAkberov/spherical_voronoi"

[dependencies]
cgmath = "0.14"
serde = "1.0"
serde_derive = "1.0"
ideal = "0.5"
